[package]
name = "he_did_not_say_that"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eventzilla = { path = "../../eventzilla" }

axum = "0.7.4"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.35.1", features = ["net", "rt-multi-thread"] }
